// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PeriodSelector /> should init component with given \`value\` prop 1`] = `
<React.Fragment>
  <Timepicker
    initialValue="09:00:00"
    name="start_at"
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "00:00",
          "value": "00:00:00",
        },
        Object {
          "label": "00:30",
          "value": "00:30:00",
        },
        Object {
          "label": "01:00",
          "value": "01:00:00",
        },
        Object {
          "label": "01:30",
          "value": "01:30:00",
        },
        Object {
          "label": "02:00",
          "value": "02:00:00",
        },
        Object {
          "label": "02:30",
          "value": "02:30:00",
        },
        Object {
          "label": "03:00",
          "value": "03:00:00",
        },
        Object {
          "label": "03:30",
          "value": "03:30:00",
        },
        Object {
          "label": "04:00",
          "value": "04:00:00",
        },
        Object {
          "label": "04:30",
          "value": "04:30:00",
        },
        Object {
          "label": "05:00",
          "value": "05:00:00",
        },
        Object {
          "label": "05:30",
          "value": "05:30:00",
        },
        Object {
          "label": "06:00",
          "value": "06:00:00",
        },
        Object {
          "label": "06:30",
          "value": "06:30:00",
        },
        Object {
          "label": "07:00",
          "value": "07:00:00",
        },
        Object {
          "label": "07:30",
          "value": "07:30:00",
        },
        Object {
          "label": "08:00",
          "value": "08:00:00",
        },
        Object {
          "label": "08:30",
          "value": "08:30:00",
        },
        Object {
          "label": "09:00",
          "value": "09:00:00",
        },
        Object {
          "label": "09:30",
          "value": "09:30:00",
        },
        Object {
          "label": "10:00",
          "value": "10:00:00",
        },
        Object {
          "label": "10:30",
          "value": "10:30:00",
        },
        Object {
          "label": "11:00",
          "value": "11:00:00",
        },
        Object {
          "label": "11:30",
          "value": "11:30:00",
        },
        Object {
          "label": "12:00",
          "value": "12:00:00",
        },
        Object {
          "label": "12:30",
          "value": "12:30:00",
        },
        Object {
          "label": "13:00",
          "value": "13:00:00",
        },
        Object {
          "label": "13:30",
          "value": "13:30:00",
        },
        Object {
          "label": "14:00",
          "value": "14:00:00",
        },
        Object {
          "label": "14:30",
          "value": "14:30:00",
        },
        Object {
          "label": "15:00",
          "value": "15:00:00",
        },
        Object {
          "label": "15:30",
          "value": "15:30:00",
        },
        Object {
          "label": "16:00",
          "value": "16:00:00",
        },
        Object {
          "label": "16:30",
          "value": "16:30:00",
        },
        Object {
          "label": "17:00",
          "value": "17:00:00",
        },
        Object {
          "label": "17:30",
          "value": "17:30:00",
        },
        Object {
          "label": "18:00",
          "value": "18:00:00",
        },
        Object {
          "label": "18:30",
          "value": "18:30:00",
        },
        Object {
          "label": "19:00",
          "value": "19:00:00",
        },
        Object {
          "label": "19:30",
          "value": "19:30:00",
        },
        Object {
          "label": "20:00",
          "value": "20:00:00",
        },
        Object {
          "label": "20:30",
          "value": "20:30:00",
        },
        Object {
          "label": "21:00",
          "value": "21:00:00",
        },
        Object {
          "label": "21:30",
          "value": "21:30:00",
        },
        Object {
          "label": "22:00",
          "value": "22:00:00",
        },
        Object {
          "label": "22:30",
          "value": "22:30:00",
        },
        Object {
          "label": "23:00",
          "value": "23:00:00",
        },
        Object {
          "label": "23:30",
          "value": "23:30:00",
        },
        Object {
          "label": "23:59",
          "value": "23:59:59",
        },
      ]
    }
    placeholder="Start At"
  />
  <Timepicker
    initialValue="18:00:00"
    name="end_at"
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "00:00",
          "value": "00:00:00",
        },
        Object {
          "label": "00:30",
          "value": "00:30:00",
        },
        Object {
          "label": "01:00",
          "value": "01:00:00",
        },
        Object {
          "label": "01:30",
          "value": "01:30:00",
        },
        Object {
          "label": "02:00",
          "value": "02:00:00",
        },
        Object {
          "label": "02:30",
          "value": "02:30:00",
        },
        Object {
          "label": "03:00",
          "value": "03:00:00",
        },
        Object {
          "label": "03:30",
          "value": "03:30:00",
        },
        Object {
          "label": "04:00",
          "value": "04:00:00",
        },
        Object {
          "label": "04:30",
          "value": "04:30:00",
        },
        Object {
          "label": "05:00",
          "value": "05:00:00",
        },
        Object {
          "label": "05:30",
          "value": "05:30:00",
        },
        Object {
          "label": "06:00",
          "value": "06:00:00",
        },
        Object {
          "label": "06:30",
          "value": "06:30:00",
        },
        Object {
          "label": "07:00",
          "value": "07:00:00",
        },
        Object {
          "label": "07:30",
          "value": "07:30:00",
        },
        Object {
          "label": "08:00",
          "value": "08:00:00",
        },
        Object {
          "label": "08:30",
          "value": "08:30:00",
        },
        Object {
          "label": "09:00",
          "value": "09:00:00",
        },
        Object {
          "label": "09:30",
          "value": "09:30:00",
        },
        Object {
          "label": "10:00",
          "value": "10:00:00",
        },
        Object {
          "label": "10:30",
          "value": "10:30:00",
        },
        Object {
          "label": "11:00",
          "value": "11:00:00",
        },
        Object {
          "label": "11:30",
          "value": "11:30:00",
        },
        Object {
          "label": "12:00",
          "value": "12:00:00",
        },
        Object {
          "label": "12:30",
          "value": "12:30:00",
        },
        Object {
          "label": "13:00",
          "value": "13:00:00",
        },
        Object {
          "label": "13:30",
          "value": "13:30:00",
        },
        Object {
          "label": "14:00",
          "value": "14:00:00",
        },
        Object {
          "label": "14:30",
          "value": "14:30:00",
        },
        Object {
          "label": "15:00",
          "value": "15:00:00",
        },
        Object {
          "label": "15:30",
          "value": "15:30:00",
        },
        Object {
          "label": "16:00",
          "value": "16:00:00",
        },
        Object {
          "label": "16:30",
          "value": "16:30:00",
        },
        Object {
          "label": "17:00",
          "value": "17:00:00",
        },
        Object {
          "label": "17:30",
          "value": "17:30:00",
        },
        Object {
          "label": "18:00",
          "value": "18:00:00",
        },
        Object {
          "label": "18:30",
          "value": "18:30:00",
        },
        Object {
          "label": "19:00",
          "value": "19:00:00",
        },
        Object {
          "label": "19:30",
          "value": "19:30:00",
        },
        Object {
          "label": "20:00",
          "value": "20:00:00",
        },
        Object {
          "label": "20:30",
          "value": "20:30:00",
        },
        Object {
          "label": "21:00",
          "value": "21:00:00",
        },
        Object {
          "label": "21:30",
          "value": "21:30:00",
        },
        Object {
          "label": "22:00",
          "value": "22:00:00",
        },
        Object {
          "label": "22:30",
          "value": "22:30:00",
        },
        Object {
          "label": "23:00",
          "value": "23:00:00",
        },
        Object {
          "label": "23:30",
          "value": "23:30:00",
        },
        Object {
          "label": "23:59",
          "value": "23:59:59",
        },
      ]
    }
    placeholder="End At"
  />
</React.Fragment>
`;

exports[`<PeriodSelector /> should render the component 1`] = `
<React.Fragment>
  <Timepicker
    name="start_at"
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "00:00",
          "value": "00:00:00",
        },
        Object {
          "label": "00:30",
          "value": "00:30:00",
        },
        Object {
          "label": "01:00",
          "value": "01:00:00",
        },
        Object {
          "label": "01:30",
          "value": "01:30:00",
        },
        Object {
          "label": "02:00",
          "value": "02:00:00",
        },
        Object {
          "label": "02:30",
          "value": "02:30:00",
        },
        Object {
          "label": "03:00",
          "value": "03:00:00",
        },
        Object {
          "label": "03:30",
          "value": "03:30:00",
        },
        Object {
          "label": "04:00",
          "value": "04:00:00",
        },
        Object {
          "label": "04:30",
          "value": "04:30:00",
        },
        Object {
          "label": "05:00",
          "value": "05:00:00",
        },
        Object {
          "label": "05:30",
          "value": "05:30:00",
        },
        Object {
          "label": "06:00",
          "value": "06:00:00",
        },
        Object {
          "label": "06:30",
          "value": "06:30:00",
        },
        Object {
          "label": "07:00",
          "value": "07:00:00",
        },
        Object {
          "label": "07:30",
          "value": "07:30:00",
        },
        Object {
          "label": "08:00",
          "value": "08:00:00",
        },
        Object {
          "label": "08:30",
          "value": "08:30:00",
        },
        Object {
          "label": "09:00",
          "value": "09:00:00",
        },
        Object {
          "label": "09:30",
          "value": "09:30:00",
        },
        Object {
          "label": "10:00",
          "value": "10:00:00",
        },
        Object {
          "label": "10:30",
          "value": "10:30:00",
        },
        Object {
          "label": "11:00",
          "value": "11:00:00",
        },
        Object {
          "label": "11:30",
          "value": "11:30:00",
        },
        Object {
          "label": "12:00",
          "value": "12:00:00",
        },
        Object {
          "label": "12:30",
          "value": "12:30:00",
        },
        Object {
          "label": "13:00",
          "value": "13:00:00",
        },
        Object {
          "label": "13:30",
          "value": "13:30:00",
        },
        Object {
          "label": "14:00",
          "value": "14:00:00",
        },
        Object {
          "label": "14:30",
          "value": "14:30:00",
        },
        Object {
          "label": "15:00",
          "value": "15:00:00",
        },
        Object {
          "label": "15:30",
          "value": "15:30:00",
        },
        Object {
          "label": "16:00",
          "value": "16:00:00",
        },
        Object {
          "label": "16:30",
          "value": "16:30:00",
        },
        Object {
          "label": "17:00",
          "value": "17:00:00",
        },
        Object {
          "label": "17:30",
          "value": "17:30:00",
        },
        Object {
          "label": "18:00",
          "value": "18:00:00",
        },
        Object {
          "label": "18:30",
          "value": "18:30:00",
        },
        Object {
          "label": "19:00",
          "value": "19:00:00",
        },
        Object {
          "label": "19:30",
          "value": "19:30:00",
        },
        Object {
          "label": "20:00",
          "value": "20:00:00",
        },
        Object {
          "label": "20:30",
          "value": "20:30:00",
        },
        Object {
          "label": "21:00",
          "value": "21:00:00",
        },
        Object {
          "label": "21:30",
          "value": "21:30:00",
        },
        Object {
          "label": "22:00",
          "value": "22:00:00",
        },
        Object {
          "label": "22:30",
          "value": "22:30:00",
        },
        Object {
          "label": "23:00",
          "value": "23:00:00",
        },
        Object {
          "label": "23:30",
          "value": "23:30:00",
        },
        Object {
          "label": "23:59",
          "value": "23:59:59",
        },
      ]
    }
    placeholder="Start At"
  />
  <Timepicker
    name="end_at"
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "00:00",
          "value": "00:00:00",
        },
        Object {
          "label": "00:30",
          "value": "00:30:00",
        },
        Object {
          "label": "01:00",
          "value": "01:00:00",
        },
        Object {
          "label": "01:30",
          "value": "01:30:00",
        },
        Object {
          "label": "02:00",
          "value": "02:00:00",
        },
        Object {
          "label": "02:30",
          "value": "02:30:00",
        },
        Object {
          "label": "03:00",
          "value": "03:00:00",
        },
        Object {
          "label": "03:30",
          "value": "03:30:00",
        },
        Object {
          "label": "04:00",
          "value": "04:00:00",
        },
        Object {
          "label": "04:30",
          "value": "04:30:00",
        },
        Object {
          "label": "05:00",
          "value": "05:00:00",
        },
        Object {
          "label": "05:30",
          "value": "05:30:00",
        },
        Object {
          "label": "06:00",
          "value": "06:00:00",
        },
        Object {
          "label": "06:30",
          "value": "06:30:00",
        },
        Object {
          "label": "07:00",
          "value": "07:00:00",
        },
        Object {
          "label": "07:30",
          "value": "07:30:00",
        },
        Object {
          "label": "08:00",
          "value": "08:00:00",
        },
        Object {
          "label": "08:30",
          "value": "08:30:00",
        },
        Object {
          "label": "09:00",
          "value": "09:00:00",
        },
        Object {
          "label": "09:30",
          "value": "09:30:00",
        },
        Object {
          "label": "10:00",
          "value": "10:00:00",
        },
        Object {
          "label": "10:30",
          "value": "10:30:00",
        },
        Object {
          "label": "11:00",
          "value": "11:00:00",
        },
        Object {
          "label": "11:30",
          "value": "11:30:00",
        },
        Object {
          "label": "12:00",
          "value": "12:00:00",
        },
        Object {
          "label": "12:30",
          "value": "12:30:00",
        },
        Object {
          "label": "13:00",
          "value": "13:00:00",
        },
        Object {
          "label": "13:30",
          "value": "13:30:00",
        },
        Object {
          "label": "14:00",
          "value": "14:00:00",
        },
        Object {
          "label": "14:30",
          "value": "14:30:00",
        },
        Object {
          "label": "15:00",
          "value": "15:00:00",
        },
        Object {
          "label": "15:30",
          "value": "15:30:00",
        },
        Object {
          "label": "16:00",
          "value": "16:00:00",
        },
        Object {
          "label": "16:30",
          "value": "16:30:00",
        },
        Object {
          "label": "17:00",
          "value": "17:00:00",
        },
        Object {
          "label": "17:30",
          "value": "17:30:00",
        },
        Object {
          "label": "18:00",
          "value": "18:00:00",
        },
        Object {
          "label": "18:30",
          "value": "18:30:00",
        },
        Object {
          "label": "19:00",
          "value": "19:00:00",
        },
        Object {
          "label": "19:30",
          "value": "19:30:00",
        },
        Object {
          "label": "20:00",
          "value": "20:00:00",
        },
        Object {
          "label": "20:30",
          "value": "20:30:00",
        },
        Object {
          "label": "21:00",
          "value": "21:00:00",
        },
        Object {
          "label": "21:30",
          "value": "21:30:00",
        },
        Object {
          "label": "22:00",
          "value": "22:00:00",
        },
        Object {
          "label": "22:30",
          "value": "22:30:00",
        },
        Object {
          "label": "23:00",
          "value": "23:00:00",
        },
        Object {
          "label": "23:30",
          "value": "23:30:00",
        },
        Object {
          "label": "23:59",
          "value": "23:59:59",
        },
      ]
    }
    placeholder="End At"
  />
</React.Fragment>
`;
